<resources>
    <string name="app_name">Lab 2</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>
    <string name="left50">Left 50%</string>
    <string name="right50">Right 50%</string>
    <string name="bottom">Bottom</string>
    <string name="centerLeft">Center_left</string>
    <string name="center">Center</string>
    <string name="centerRight">Center_right</string>
    <string name="newButton">New Button</string>
</resources>