<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity3">
    <Button
        android:id="@+id/lefttop50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/left50"
        android:layout_toStartOf="@+id/topspace"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>
    <Space
        android:id="@+id/topspace"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/right50"
        android:layout_toEndOf="@+id/topspace"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>

    <Button
        android:id="@+id/centerLeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centerLeft"
        android:layout_toStartOf="@+id/centerButton"
        android:layout_alignBaseline="@+id/centerButton"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>
    <Button
        android:id="@+id/centerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>
    <Button
        android:id="@+id/centerRightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centerRight"
        android:layout_toEndOf="@+id/centerButton"
        android:layout_alignBaseline="@+id/centerButton"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"/>
</RelativeLayout>
