<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".Activity2"
    android:gravity="center_vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_gravity="top">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:layout_weight="0.33"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:layout_weight="0.33"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:layout_weight="0.33"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_gravity="center">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:layout_weight="0.4"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:layout_weight="0.4"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="bottom"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:layout_weight="0.25"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:layout_weight="0.25"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button7"
            android:layout_weight="0.5"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

    </LinearLayout>

</LinearLayout>
