<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".Activity1"
    android:weightSum="1"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.75"
        android:gravity="center"
        android:weightSum="1">
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/button1"
            android:layout_weight="0.2"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/button2"
            android:layout_weight="0.2"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/button3"
            android:layout_weight="0.2"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.02"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/button4"
            android:layout_weight="0.2"/>
    </LinearLayout>

</LinearLayout>
